[package]
name = "iceforge"
version = "0.1.0"
edition = "2021"
authors = ["Dr-42"]
license = "GPL-3.0-or-later"
description = "A simple build tool for building C and C++ applications"
homepage = "https://github.com/Dr-42/iceforge"
repository = "https://github.com/Dr-42/iceforge"
keywords = ["build", "build-tool", "C++", "toml", "C"]

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"]}
toml = "0.8.19"
